app/assets/stylesheets/app.scss
/* ... */
.card-header.chill {
  background: white !important;
  color: #212529 !important;
  border: none !important;
  position: relative;
}

.card-header.chill::after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 15px;
  right: 15px;
  height: 1px;
  background-color: rgba(0, 0, 0, 0.1);
}

.newsfeed-icon {
  font-size: 16px;
  color: $color_primary;
  background-color: $color_primary_transparent_1;
  width: 2.25em;
  height: 2.25em;
}

.newsfeed-icon .bi-ticket-detailed-fill {
  position: relative;
  top: -1px;
}

a.btn-outline-danger:focus {
  color: $color_danger;
}

@media(min-width: 576px) {
  form.form-inline input.datepicker {
    width: 10em !important
  }
}

a.ui-menu-item-wrapper {
  display: block;
  text-decoration: none
}

a.ui-menu-item-wrapper:focus,
a.ui-menu-item-wrapper:hover {
  color: #333
}

.ui-state-active,
.ui-widget-content .ui-state-active,
.ui-widget-header .ui-state-active,
a.ui-button:active,
.ui-button:active,
.ui-button.ui-state-active:hover {
  font-weight: inherit
}

.ck-heading_paragraph_lead {
  font-size: 0.85rem !important
}

a.text-primary:hover,
a.text-primary:focus {
  color: $color_primary_hover !important
}

ul.pagination {
  justify-content: center;
}

.shorturl {
  display: inline;
  height: auto;
  width: 15em;
  border: 0;
  border-radius: 0;
  border-bottom: 1px dotted #C8C7CC;
  padding: 0;
  padding-left: 0.375rem
}

.shorturl:focus {
  outline: none;
  box-shadow: none;
  -webkit-box-shadow: none
}

.shorturl+a {
  color: $body_text
}

.grecaptcha-badge {
  visibility: hidden;
}

.no-spinner .bi.bi-spin {
  display: none
}

mark,
.highlight {
  padding-left: 0;
  padding-right: 0;
  background-color: #FDFFAA
}

.dropdown-menu>li.notification .notification-info,
.dropdown-menu>li.notification .notification-title,
.dropdown-menu>li.notification .notification-desc {
  white-space: normal;
  line-height: 1.35
}


a.bg-primary:hover,
a.bg-primary:focus,
button.bg-primary:hover,
button.bg-primary:focus,
.bg-primary-hover {
  background-color: $color_primary_hover !important
}

.flatpickr-day.selected,
.flatpickr-day.startRange,
.flatpickr-day.endRange,
.flatpickr-day.selected.inRange,
.flatpickr-day.startRange.inRange,
.flatpickr-day.endRange.inRange,
.flatpickr-day.selected:focus,
.flatpickr-day.startRange:focus,
.flatpickr-day.endRange:focus,
.flatpickr-day.selected:hover,
.flatpickr-day.startRange:hover,
.flatpickr-day.endRange:hover,
.flatpickr-day.selected.prevMonthDay,
.flatpickr-day.startRange.prevMonthDay,
.flatpickr-day.endRange.prevMonthDay,
.flatpickr-day.selected.nextMonthDay,
.flatpickr-day.startRange.nextMonthDay,
.flatpickr-day.endRange.nextMonthDay {
  background: $color_primary;
  border-color: $color_primary
}

body[contenteditable] {
  background: white
}

#content {
  background: white
}

@media print {
  a[href]:after {
    content: none;
  }
}

.progress {
  background-color: $color_primary_transparent_3;
}

.progress-bar {
  border-radius: 0;
}

.label-ai {
  background: #752DB9
}

.label-stripe {
  background: #6158F7
}

.label-outline-primary {
  color: $color_primary;
  border: 1px solid $color_primary;
}

label .form-text {
  font-weight: 500
}

#map-canvas button[title=Close] {
  height: 36px !important;
  margin-top: -8px !important;
  margin-right: 2px !important;
}

.map-icon-label .bi {
  color: white;
  font-size: 20px !important;
  position: relative;
  top: -18px
}

.map-icon-label .map-icon {
  color: white;
  font-size: 22px !important;
  position: relative;
  top: -4px
}

.note-group-select-from-files {
  display: none
}

.subtle {
  color: $color_grey !important
}

.subtle.active,
.subtle:hover {
  color: $color_primary !important
}

.message-preview:hover,
.message-preview.active {
  background: $color_muted_transparent_3
}

.message-preview.unread {
  background: $color_theme_transparent !important
}

.table-hr td:first-child {
  width: 1px;
  white-space: nowrap;
  font-weight: bold;
  padding-right: 1rem;
}

.table-hr td {
  border: 0 !important;
  border-bottom: 0.1rem solid #E6E5E7 !important;
}

.tactivity a,
.tactivity span {
  font-size: 0.8rem;
  color: white
}

.tactivity,
.tactivity-accept {
  height: 8rem
}

td .tactivity,
td .tactivity-accept {
  width: 16rem
}

.tactivity h3 {
  line-height: 1.2rem
}

.tactivity h3 a {
  font-size: 1.2rem
}

textarea[id=comment_body] {
  height: 4em;
  overflow: hidden;
}

textarea[id=verdict_reason] {
  height: 6em;
}

.image-wall {}

.image-wall img {
  margin-bottom: 0.2rem;
}

.input-group-prepend,
.input-group-append {
  height: 2.125rem
}

.badge {
  border-radius: 0.25rem
}

.alert button.close {
  font-size: 1rem
}

.alert-danger a {
  color: #e2342a;
  font-weight: bold
}

.alert a {
  font-weight: bold
}

li.reply .widget-chat-message a {
  color: white;
  text-decoration: underline
}

.no-gutters>.col,
.no-gutters>[class*=col-] {
  padding-right: 0 !important;
  padding-left: 0 !important;
}

.pace .pace-tactivity {
  display: none
}

.bgo:hover {
  opacity: 0 !important
}

.rainbow {
  margin: 0 auto;
  background: linear-gradient(to right, #8747e6, #47a6e6, #54e645);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

h4.block-title,
div.block-title,
div.block-title h4 {
  font-size: 1.66rem
}

div.block-title .label {
  font-size: 0.75rem;
  position: relative;
  top: -0.25rem;
}

#gathering-nav ul li a {
  font-size: 0.75rem
}

#gathering-nav .nav-link {
  padding: 0.33rem 0.66rem
}

#gathering-nav .nav>li>a:focus,
#gathering-nav .nav>li>a:hover {
  background: $color_inverse
}

#gathering-nav .nav-pills .nav-link.active,
#gathering-nav .nav-pills .show>.nav-link {
  background: $color_inverse
}

.ck-editor__editable {
  max-height: 500px
}

.select2-container {
  height: auto;
}

.bi.bi-star-fill {
  color: #f5b041
}

.editor-preview {
  font-size: 18px
}

div.wysiwyg img,
.editor-preview-side img,
.editor-preview img {
  max-width: 100%
}
/* ... */

